# ope-opa-nation

./: .gitignore  README.md  install.sh  pyproject.toml
src/: __main__.py  agent.py  cli.py  config.py
src/tools/: android.py  codesearch.py  devtools.py  files.py  memory.py  navigator.py  phone.py  search.py  shell.py  utils.py  webtools.py
